@@ -150,15 +150,15 @@ bool GBDeserialize(struct GB* gb, const struct GBSerializedState* state) {
 	gb->doubleSpeed = GBSerializedCpuFlagsGetDoubleSpeed(flags);
 	gb->audio.timingFactor = gb->doubleSpeed + 1;
 
+	LOAD_32LE(gb->cpu->cycles, 0, &state->cpu.cycles);
+	LOAD_32LE(gb->cpu->nextEvent, 0, &state->cpu.nextEvent);
+	gb->timing.root = NULL;
+
 	uint32_t when;
 	LOAD_32LE(when, 0, &state->cpu.eiPending);
 	if (GBSerializedCpuFlagsIsEiPending(flags)) {
 		mTimingSchedule(&gb->timing, &gb->eiPending, when);
 	}
-
-	LOAD_32LE(gb->cpu->cycles, 0, &state->cpu.cycles);
-	LOAD_32LE(gb->cpu->nextEvent, 0, &state->cpu.nextEvent);
-	gb->timing.root = NULL;
 
 	gb->model = state->model;
 
